fix: d8 - vertical align

--- a/css/style.css
+++ b/css/style.css
@@ -160,7 +160,6 @@ img {
   font-family: "GilroyBold", "Arial", sans-serif;
 
   display: inline-block;
-  vertical-align: baseline;
   padding: 9px 40px;
 
   border: none;
@@ -182,7 +181,6 @@ img {
   font-family: "GilroyBold", "Arial", sans-serif;
 
   display: inline-block;
-  vertical-align: baseline;
   padding: 9px 30px;
 
   border: none;
@@ -306,7 +304,7 @@ img {
 
 .header .main-header-logo {
   display: inline-block;
-  vertical-align: baseline;
+  vertical-align: top;
   position: absolute;
   top: 3px;
 }
@@ -1100,7 +1098,7 @@ img {
 
 .footer-logo {
   display: inline-block;
-  vertical-align: baseline;
+  vertical-align: top;
 }
 
 .footer-logo:hover {
@@ -1165,7 +1163,7 @@ img {
 
 .social-buttons a {
   display: inline-block;
-  vertical-align: baseline;
+  vertical-align: top;
 }
 
 .social-buttons a::before {
@@ -1693,7 +1691,7 @@ img {
   background: transparent;
   cursor: pointer;
   display: inline-block;
-  vertical-align: baseline;
+  vertical-align: top;
 }
 
 .slider-controllers button::before {
